--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "bower": "^1.8.12",
     "core-js": "^3.6.5",
     "gulp": "^4.0.2",
