--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bower": "^1.8.12",
     "core-js": "^3.6.5",
     "gulp": "^4.0.2",
+    "mitt": "^3.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
