--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.5",
     "gulp": "^4.0.2",
     "mitt": "^3.0.0",
-    "vue": "^2.6.11"
+    "vue": "^3.2.20",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
