--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "core-js": "^3.6.5",
     "gulp": "^4.0.2",
     "mitt": "^3.0.0",
+    "register-service-worker": "^1.7.1",
     "vue": "^3.2.20",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
